--- a/index.html
+++ b/index.html
@@ -14,11 +14,26 @@
   --font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 *{box-sizing:border-box;margin:0;padding:0}
-html, body{width:100%;margin:0;padding:0;overflow-x:hidden}
-body{font-family:var(--font-family);background:var(--color-background);color:var(--color-text);line-height:1.6;padding-top:120px}
+html, body{
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden; /* 🔥 quita el scroll lateral */
+}
+body{
+  font-family:var(--font-family);
+  background:var(--color-background);
+  color:var(--color-text);
+  line-height:1.6;
+  padding-top:120px;
+}
 
 /* HEADER */
-header{position:fixed;top:0;left:0;width:100%;background:var(--color-primary);color:var(--color-background);z-index:1000;transition:all .3s ease;}
+header{
+  position:fixed;top:0;left:0;width:100%;
+  background:var(--color-primary);color:var(--color-background);z-index:1000;
+  transition:all .3s ease;
+}
 .logo-container{display:flex;align-items:center;justify-content:center;height:70px;overflow:hidden;transition:all .3s}
 .logo-container img{height:50px;margin-right:10px}
 .logo-container h1{font-size:1.8rem;color:#fff;margin:0;}
@@ -29,16 +44,63 @@ nav ul{list-style:none;display:flex;justify-content:center;gap:20px;padding:10px
 nav a{color:var(--color-background);text-decoration:none;font-weight:500;font-size:1rem;padding:5px 0;}
 nav a.active{color:var(--color-accent);border-bottom:2px solid var(--color-accent);}
 
-/* HERO */
-.hero-banners{display:flex;width:100vw;margin-top:-60px;overflow-x:hidden;position:relative;}
-.banner{flex:0 0 33.333%;max-height:90vh;overflow:hidden;min-width:0;margin:0}
-.banner img{width:100%;height:100%;object-fit:cover;display:block;transition:transform .5s ease;}
-.banner img:hover{transform:scale(1.05);}
+/* HERO - BANNERS */
+.hero-banners{
+  display:flex;
+  width:100%;
+  margin-top:-60px;
+  overflow:hidden;
+  position:relative;
+}
+.banner{
+  flex:1 1 33.333%;
+  max-height:90vh;
+  overflow:hidden;
+  min-width:0;
+}
+.banner img{
+  width:100%;
+  height:100%;
+  object-fit:cover;
+  display:block;
+  transition:transform .5s ease;
+}
+.banner img:hover{ transform:scale(1.05); }
 
-/* Responsive banners */
+/* Indicador de scroll para móviles */
+.scroll-indicator{
+  display:none;
+  position:absolute;
+  right:10px;
+  bottom:10px;
+  font-size:1.2rem;
+  background:rgba(0,0,0,0.5);
+  color:#fff;
+  padding:0.3rem 0.6rem;
+  border-radius:4px;
+  z-index:10;
+}
+
+/* Responsive: Móvil y tablet */
 @media(max-width:1024px){
-  .hero-banners{flex-wrap:nowrap;overflow-x:auto;scroll-snap-type:x mandatory;-webkit-overflow-scrolling:touch;}
-  .banner{flex:0 0 100vw;scroll-snap-align:center;}
+  .hero-banners{
+    flex-wrap: nowrap;
+    overflow-x:auto;
+    scroll-snap-type:x mandatory;
+    -webkit-overflow-scrolling: touch;
+  }
+  .banner{
+    flex:0 0 100%;
+    scroll-snap-align:center;
+  }
+  .scroll-indicator{
+    display:block;
+    animation: bounce 1s infinite alternate;
+  }
+}
+@keyframes bounce{
+  0%{transform: translateX(0);}
+  100%{transform: translateX(5px);}
 }
 
 /* SEARCH */
@@ -48,13 +110,14 @@ nav a.active{color:var(--color-accent);border-bottom:2px solid var(--color-accen
 .search-bar input{flex:1;padding:.75rem;border:0;outline:none;font-size:16}
 .search-bar svg{width:18px;height:18px;margin:0 10px;flex-shrink:0}
 
-/* PRODUCTOS */
+/* ROPA - PRODUCTOS */
 section{padding:4rem 2rem;text-align:center}
 section h2{margin-bottom:2rem;font-size:2rem;color:var(--color-primary)}
 .products{display:grid;gap:20px;grid-template-columns:repeat(4,1fr)}
 @media (max-width:1024px){.products{grid-template-columns:repeat(2,1fr)}}
 @media (max-width:768px){.products{grid-template-columns:repeat(1,1fr)}}
-.product{border:1px solid var(--color-accent);border-radius:8px;padding:1rem;transition:transform .3s,box-shadow .3s;cursor:pointer}
+
+.product{border:1px solid var(--color-accent);border-radius:8px;padding:1rem;transition:transform .3s,box-shadow .3s}
 .product:hover{transform:translateY(-5px);box-shadow:0 4px 20px rgba(0,0,0,.1)}
 .product img{width:100%;aspect-ratio:1/1;object-fit:cover;border-radius:8px;margin-bottom:1rem}
 .product h3{margin-bottom:.5rem;color:var(--color-secondary)}
@@ -62,21 +125,6 @@ section h2{margin-bottom:2rem;font-size:2rem;color:var(--color-primary)}
 
 /* FOOTER */
 footer{background:var(--color-primary);color:var(--color-background);text-align:center;padding:2rem 1rem;margin-top:2rem}
-
-/* MODAL */
-.modal{display:none;position:fixed;top:0;left:0;width:100%;height:100%;background:rgba(0,0,0,0.7);justify-content:center;align-items:center;z-index:2000}
-.modal-content{background:#fff;width:80%;max-width:900px;display:flex;border-radius:10px;overflow:hidden}
-.modal-left{flex:1;background:#f9f9f9;display:flex;align-items:center;justify-content:center}
-.modal-left img{width:100%;max-height:90vh;object-fit:contain}
-.modal-right{flex:1;padding:2rem;text-align:left}
-.modal-right h3{margin-bottom:1rem}
-.modal-right p{margin-bottom:1rem}
-.close-btn{position:absolute;top:15px;right:20px;font-size:1.5rem;color:#fff;cursor:pointer}
-.add-cart{display:inline-block;margin-top:1rem;padding:.75rem 1.5rem;background:var(--color-primary);color:#fff;border:none;border-radius:5px;cursor:pointer}
-@media(max-width:768px){
-  .modal-content{flex-direction:column;width:95%}
-  .modal-left,.modal-right{flex:none;width:100%}
-}
 </style>
 </head>
 <body>
@@ -95,11 +143,12 @@ footer{background:var(--color-primary);color:var(--color-background);text-align:
   </nav>
 </header>
 
-<!-- Hero -->
+<!-- Hero Banners -->
 <section class="hero-banners" id="inicio">
   <div class="banner"><img src="images/MODELO4.png" alt="Modelo 1"></div>
   <div class="banner"><img src="images/MODELO2.png" alt="Modelo 2"></div>
   <div class="banner"><img src="images/MODELO5.png" alt="Modelo 3"></div>
+  <span class="scroll-indicator">&#8594; Desliza</span>
 </section>
 
 <!-- Buscador -->
@@ -129,31 +178,13 @@ footer{background:var(--color-primary);color:var(--color-background);text-align:
   <p>&copy; 2024 Tu Tienda Elegante. Todos los derechos reservados.</p>
 </footer>
 
-<!-- MODAL -->
-<div class="modal" id="productModal">
-  <span class="close-btn" id="closeModal">&times;</span>
-  <div class="modal-content">
-    <div class="modal-left"><img id="modalImg" src="" alt=""></div>
-    <div class="modal-right">
-      <h3 id="modalTitle"></h3>
-      <p id="modalDesc"></p>
-      <label for="tallas">Tallas disponibles:</label>
-      <select id="tallas">
-        <option>Mediana</option>
-        <option>Grande</option>
-        <option>Extra Grande</option>
-      </select>
-      <p class="price" id="modalPrice"></p>
-      <button class="add-cart">Añadir al carrito 🛒</button>
-    </div>
-  </div>
-</div>
-
 <script>
 /* Productos */
 const ropaProducts = [
-   {id:1,name:"PLAYERA OVERSIZE NEGRA 220G",description:"Comodidad superior y sensación de alta calidad.",price:"$220.00",image:"images/PLAYERANEGRA1.png"},
-   {id:2,name:"PLAYERA BLANCA OVERSIZE",description:"Estilo minimalista y versátil.",price:"$220.00",image:"images/PLAYERABLANCA.png"}
+   {id:1,name:"PLAYERA OVERSIZE NEGRA 220G",description:"Comodidad superior y sensación de alta calidad.",price:"$220.00",image:"images/PLAYERANEGRA1.png",keywords:"playera negra oversize"},
+   {id:2,name:"PLAYERA OVERSIZE NEGRA 220G",description:"Comodidad superior y sensación de alta calidad.",price:"$220.00",image:"images/PLAYERANEGRA1.png",keywords:"playera negra oversize"},
+   {id:3,name:"PLAYERA OVERSIZE NEGRA 220G",description:"Comodidad superior y sensación de alta calidad.",price:"$220.00",image:"images/PLAYERANEGRA1.png",keywords:"playera negra oversize"},
+   {id:4,name:"PLAYERA OVERSIZE NEGRA 220G",description:"Comodidad superior y sensación de alta calidad.",price:"$220.00",image:"images/PLAYERANEGRA1.png",keywords:"playera negra oversize"},
 ];
 function renderRopa(list){
   const cont = document.getElementById('ropaProducts');
@@ -162,23 +193,9 @@ function renderRopa(list){
     const div = document.createElement('div');
     div.className = 'product';
     div.innerHTML = `<img src="${p.image}" alt="${p.name}"><h3>${p.name}</h3><p>${p.description}</p><p class="price">${p.price}</p>`;
-    div.addEventListener('click', ()=>openModal(p));
     cont.appendChild(div);
   });
 }
-
-/* Modal */
-const modal = document.getElementById('productModal');
-const closeModalBtn = document.getElementById('closeModal');
-function openModal(product){
-  document.getElementById('modalImg').src = product.image;
-  document.getElementById('modalTitle').textContent = product.name;
-  document.getElementById('modalDesc').textContent = product.description;
-  document.getElementById('modalPrice').textContent = product.price;
-  modal.style.display = 'flex';
-}
-closeModalBtn.addEventListener('click', ()=> modal.style.display='none');
-window.addEventListener('click', e=>{ if(e.target==modal) modal.style.display='none'; });
 
 /* Buscador */
 const searchInput = document.getElementById('searchInput');
@@ -187,13 +204,13 @@ searchInput.addEventListener('input', ()=>{
   const q = searchInput.value.trim().toLowerCase();
   if(q){
     clearBtn.style.display='inline-block';
-    const filtered = ropaProducts.filter(p => p.name.toLowerCase().includes(q));
+    const filtered = ropaProducts.filter(p => p.name.toLowerCase().includes(q) || (p.keywords && p.keywords.toLowerCase().includes(q)));
     renderRopa(filtered);
   }else{ clearBtn.style.display='none'; renderRopa(); }
 });
 clearBtn.addEventListener('click', ()=>{ searchInput.value=''; clearBtn.style.display='none'; renderRopa(); });
 
-/* Header hide */
+/* Header hide on scroll */
 const header = document.getElementById('mainHeader');
 let lastY=0;
 window.addEventListener('scroll', ()=>{
@@ -202,7 +219,7 @@ window.addEventListener('scroll', ()=>{
   lastY = y<=0?0:y;
 });
 
-/* Active nav */
+/* Active nav tab */
 const navLinks = document.querySelectorAll('nav a');
 const currentPage = window.location.pathname.split("/").pop();
 navLinks.forEach(link=>{
