--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ html, body{
   width: 100%;
   margin: 0;
   padding: 0;
-  overflow-x: hidden; /* 🔥 quita el scroll lateral */
+  overflow-x: hidden;
 }
 body{
   font-family:var(--font-family);
@@ -47,16 +47,17 @@ nav a.active{color:var(--color-accent);border-bottom:2px solid var(--color-accen
 /* HERO - BANNERS */
 .hero-banners{
   display:flex;
-  width:100%;
+  width:100vw;
   margin-top:-60px;
-  overflow:hidden;
+  overflow-x:hidden;
   position:relative;
 }
 .banner{
-  flex:1 1 33.333%;
+  flex: 0 0 33.333%;
   max-height:90vh;
   overflow:hidden;
   min-width:0;
+  margin:0; /* elimina espacio entre banners */
 }
 .banner img{
   width:100%;
@@ -90,7 +91,7 @@ nav a.active{color:var(--color-accent);border-bottom:2px solid var(--color-accen
     -webkit-overflow-scrolling: touch;
   }
   .banner{
-    flex:0 0 100%;
+    flex:0 0 100vw;
     scroll-snap-align:center;
   }
   .scroll-indicator{
@@ -98,6 +99,7 @@ nav a.active{color:var(--color-accent);border-bottom:2px solid var(--color-accen
     animation: bounce 1s infinite alternate;
   }
 }
+
 @keyframes bounce{
   0%{transform: translateX(0);}
   100%{transform: translateX(5px);}
