--- a/perfumes.html
+++ b/perfumes.html
@@ -44,17 +44,20 @@ h1{margin-bottom:40px;margin-top:0}
 .perfume .price{font-weight:bold;margin-top:10px;font-size:1rem;color:#000}
 
 /* MODAL */
-.modal{display:none;position:fixed;top:0;left:0;width:100%;height:100%;background:rgba(0,0,0,0.7);z-index:2000;justify-content:center;align-items:center}
-.modal-content{background:#fff;width:90%;max-width:900px;display:flex;border-radius:10px;overflow:hidden}
-.modal-left, .modal-right{flex:1;padding:20px}
-.modal-left img{width:100%;height:auto;border-radius:10px}
-.modal-right h2{margin-bottom:15px}
-.modal-right p{margin-bottom:15px}
-.modal-right label{font-weight:bold;display:block;margin:10px 0 5px}
-.modal-right select, .modal-right input{padding:8px;width:100%;margin-bottom:15px}
-.add-cart{background:var(--color-primary);color:#fff;padding:12px;border:none;cursor:pointer;width:100%;border-radius:5px;font-size:1rem}
-.add-cart:hover{background:#333}
-.close{position:absolute;top:15px;right:20px;font-size:28px;font-weight:bold;color:#fff;cursor:pointer}
+.modal{display:none;position:fixed;top:0;left:0;width:100%;height:100%;background:rgba(0,0,0,0.7);z-index:2000;justify-content:center;align-items:center;padding:20px;}
+.modal-content{background:#fff;width:90%;max-width:900px;display:flex;border-radius:10px;overflow:hidden;box-shadow:0 8px 30px rgba(0,0,0,.3);}
+.modal-left{flex:1.2;background:#000;display:flex;align-items:center;justify-content:center;}
+.modal-left img{width:100%;height:100%;object-fit:cover;border-radius:8px;}
+.modal-right{flex:1;padding:30px;display:flex;flex-direction:column;justify-content:center;text-align:left;}
+.modal-right h2{font-size:1.8rem;margin-bottom:10px;color:#111;}
+.modal-right p{margin-bottom:10px;color:#555;}
+.modal-right .price{font-size:1.5rem;font-weight:bold;margin:15px 0;color:#000;}
+.modal-right label{font-weight:600;margin-bottom:5px;display:block;font-size:0.95rem;}
+.modal-right select,.modal-right input{width:100%;padding:10px;border:1px solid #ccc;border-radius:6px;margin-bottom:15px;font-size:1rem;}
+.add-cart{background:linear-gradient(135deg,#000,#333);color:#fff;padding:14px;border:none;width:100%;border-radius:8px;font-size:1.1rem;font-weight:600;cursor:pointer;transition:all .3s ease;margin-top:10px;}
+.add-cart:hover{background:linear-gradient(135deg,#333,#000);transform:translateY(-2px);}
+.close{position:absolute;top:20px;right:30px;font-size:36px;font-weight:bold;color:#fff;cursor:pointer;z-index:2100;transition:color .3s;}
+.close:hover{color:#aaa;}
 </style>
 </head>
 <body>
@@ -80,8 +83,8 @@ h1{margin-bottom:40px;margin-top:0}
 
 <!-- MODAL -->
 <div class="modal" id="productModal">
+  <span class="close" id="closeModal">&times;</span>
   <div class="modal-content">
-    <span class="close" id="closeModal">&times;</span>
     <div class="modal-left">
       <img id="modalImage" src="" alt="Producto">
     </div>
@@ -136,7 +139,7 @@ perfumes.forEach((p, index)=>{
 
 /* Modal */
 const modal = document.getElementById("productModal");
-const closeModal = document.getElementById("closeModal");
+const closeModalBtn = document.getElementById("closeModal");
 const modalImage = document.getElementById("modalImage");
 const modalTitle = document.getElementById("modalTitle");
 const modalDescription = document.getElementById("modalDescription");
@@ -149,7 +152,8 @@ function openModal(product){
   modalDescription.textContent = product.description;
   modalPrice.textContent = product.price;
 }
-closeModal.addEventListener("click", ()=>modal.style.display="none");
+
+closeModalBtn.addEventListener("click", ()=>modal.style.display="none");
 window.addEventListener("click", e=>{if(e.target===modal) modal.style.display="none";});
 
 /* Header hide on scroll */
